修改启动图标

--- a/Socket Debugger/Socket Debugger.csproj
+++ b/Socket Debugger/Socket Debugger.csproj
@@ -37,7 +37,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <ApplicationIcon>Resource\Net.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Net.ico</ApplicationIcon>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -47,11 +47,11 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <ApplicationIcon>Resource\Net.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Net.ico</ApplicationIcon>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Net.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Net.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AduSkin, Version=1.1.1.9, Culture=neutral, PublicKeyToken=null">
@@ -130,9 +130,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
