--- a/Socket Debugger/Socket Debugger.csproj
+++ b/Socket Debugger/Socket Debugger.csproj
@@ -125,6 +125,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\LeftFunctionModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Utils\IdHelper.cs" />
     <Compile Include="Utils\MessageBoxHelper.cs" />
