--- a/Socket Debugger/packages.config
+++ b/Socket Debugger/packages.config
@@ -1,20 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
-  <package id="MaterialDesignColors" version="2.0.6" targetFramework="net472" />
-  <package id="MaterialDesignThemes" version="4.5.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
-  <package id="sqlite-net-pcl" version="1.8.116" targetFramework="net472" />
-  <package id="SQLitePCLRaw.bundle_green" version="2.0.7" targetFramework="net472" />
-  <package id="SQLitePCLRaw.core" version="2.0.7" targetFramework="net472" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.7" targetFramework="net472" />
-  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.7" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.CodeDom" version="6.0.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
-  <package id="System.Management" version="6.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+    <package id="DryIoc.dll" version="4.7.7" targetFramework="net472" />
+    <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+    <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
+    <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+    <package id="Prism.Core" version="8.1.97" targetFramework="net472" />
+    <package id="Prism.DryIoc" version="8.1.97" targetFramework="net472" />
+    <package id="Prism.Wpf" version="8.1.97" targetFramework="net472" />
+    <package id="sqlite-net-pcl" version="1.8.116" targetFramework="net472" />
+    <package id="SQLitePCLRaw.bundle_green" version="2.0.7" targetFramework="net472" />
+    <package id="SQLitePCLRaw.core" version="2.0.7" targetFramework="net472" />
+    <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.7" targetFramework="net472" />
+    <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.7" targetFramework="net472" />
+    <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+    <package id="System.CodeDom" version="6.0.0" targetFramework="net472" />
+    <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
+    <package id="System.Management" version="6.0.0" targetFramework="net472" />
+    <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+    <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+    <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+    <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
